--- a/Emplay/emplarrapp/templates/index.html
+++ b/Emplay/emplarrapp/templates/index.html
@@ -11,7 +11,7 @@
     <!--<link type="text/css" rel="stylesheet" href="/css/main.css" media="screen" />-->
     <!--<script src="/static/js/util.js" type="text/javascript"></script>-->
     <script type="text/javascript" src="{% static "js/jquery-3.2.1.min.js" %}"></script>
-    <script type="text/javascript" src="{% static "js/materialize.min.js" %}"></script>
+    <script type="text/javascript" src="/static/js/materialize.min.js"></script>
     <script type="text/javascript" src="{% static "js/jquery.nicescroll.js" %}"></script>
     <script type="text/javascript" src="{% static "js/gistfile1.js" %}"></script>
     <script type="text/javascript" src="{% static "js/jquery.materialize-autocomplete.js" %}"></script>
@@ -19,8 +19,8 @@
     <!-- <script type='text/javascript' src='/cdn.jsdelivr.net/jquery.marquee/1.3.9/jquery.marquee.min.js'></script> -->
     <script type="text/javascript" src="{% static "js/script.js" %}"></script>
     <!--Import materialize.css-->
-    <link type="text/css" rel="stylesheet" href="{% static "css/materialize.min.css" %}" media="screen,projection" />
-    <link type="text/css" rel="stylesheet" href="{% static "css/materializestyle.css" %}" />
+    <link type="text/css" rel="stylesheet" href="/static/css/materialize.min.css" media="screen,projection" />
+    <link type="text/css" rel="stylesheet" href="/static/css/materializestyle.css" />
     <style>
         .pl {
             display: flex;
